done Elena remarks