@@ -4,10 +4,10 @@ import jakarta.transaction.Transactional;
 import java.util.List;
 import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
+import mate.academy.dao.order.OrderItemResponseDto;
 import mate.academy.dao.order.OrderRequestDto;
 import mate.academy.dao.order.OrderResponseDto;
 import mate.academy.dao.order.OrderUpdateDto;
-import mate.academy.dao.shoppingcart.CartItemResponseDto;
 import mate.academy.exception.EntityNotFoundException;
 import mate.academy.mapper.OrderMapper;
 import mate.academy.model.Order;
@@ -19,6 +19,7 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 @Service
+@Transactional
 @RequiredArgsConstructor
 public class OrderServiceImpl implements OrderService {
     private final OrderItemRepository orderItemRepository;
@@ -26,31 +27,30 @@ public class OrderServiceImpl implements OrderService {
     private final OrderMapper orderMapper;
 
     @Override
-    @Transactional
     public OrderResponseDto createOrder(OrderRequestDto requestDto) {
         Order order = orderMapper.toEntity(requestDto);
-        Order saved = orderRepository.save(order);
-        return orderMapper.toDto(saved);
+        orderRepository.save(order);
+        return orderMapper.toDto(order);
     }
 
     @Override
     public List<OrderResponseDto> getAllOrders(Long userId, Pageable pageable) {
         return orderRepository.findAllByUserId(userId, pageable).stream()
                 .map(orderMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
-    public CartItemResponseDto getItemByOrderIdAndItemId(Long orderId, Long itemId) {
-        OrderItem item = orderItemRepository.findByOrderIdAndItemId(orderId, itemId)
+    public OrderItemResponseDto getItemByOrderIdAndItemId(Long userId, Long orderId, Long itemId) {
+        OrderItem item = orderItemRepository.findByIdAndOrderIdAndUserId(userId, orderId, itemId)
                 .orElseThrow(() -> new EntityNotFoundException("Can't find order item by order id "
-                        + orderId + " and item id " + itemId));
+                        + orderId + ", item id " + itemId + " and user id " + userId));
         return orderMapper.toDto(item);
     }
 
     @Override
-    public List<CartItemResponseDto> getItemsByOrderId(Long orderId) {
-        return orderItemRepository.findAllByOrderId(orderId).stream()
+    public List<OrderItemResponseDto> getItemsByOrderId(Long userId, Long orderId) {
+        return orderItemRepository.findByOrderIdAndUserId(userId, orderId).stream()
                 .map(orderMapper::toDto)
                 .collect(Collectors.toList());
     }
